implemented last endpoints in stickeres, fixed some errors

--- a/docs/boards.yaml
+++ b/docs/boards.yaml
@@ -185,7 +185,7 @@ paths:
           schema:
             type: integer
       requestBody:
-        required: false
+        required: true
         content:
           application/json:
             schema:
