--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    restart: always
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U mirumir_user -d mirumir_db"]
       interval: 5s
@@ -24,13 +25,25 @@ services:
     env_file:
       - ./backend/.env
     ports:
-      - "8000:8000"
+      - "127.0.0.1:8000:8000"
+    restart: always
     depends_on:
       postgres:
         condition: service_healthy
     volumes:
       - ./backend:/app
     command: uv run uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: mirumir_frontend
+    ports:
+      - "127.0.0.1:3000:3000"
+    restart: always
+    depends_on:
+      - backend
 
 volumes:
   postgres_data:
